--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "sample-data-ja",
   "version": "1.0.0",
-  "description": "Sample OMOP-ish data in Japanese",
+  "description": "Sample structured data in Japanese",
   "main": "test.js",
   "scripts": {
     "build": "node scripts/build.js"
